--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,31 @@ h3 {
     list-style: none;
 }
 
+.filler1:hover{
+    background: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/swatch-hero_2400x.jpg?v=1558564563&auto=format&q=50&) center center/cover no-repeat padding-box;
+    position: absolute;
+    background-size: cover;
+    background-position: 50%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -100;
+}
+
 .filler2:hover{
+    background: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/last-slide_2400x.jpg?v=1551770643&auto=format&q=50&=50&) center center/cover no-repeat padding-box;
+    position: absolute;
+    background-size: cover;
+    background-position: 50%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -100;
+}
+
+.filler3:hover{
     background: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/white_gywan_2400x.jpg?v=1551770466&auto=format&q=50&) center center/cover no-repeat padding-box;
     position: absolute;
     background-size: cover;
@@ -65,6 +89,16 @@ h3 {
     bottom: 0;
     z-index: -100;
 }
+
+.centeredhead {
+    position: relative;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #373F3D;
+}
+
 
 
 .navlist { 
