--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,9 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root{
+    --main-bg-colour:#E0E1DF;
+    --main-brand-colour:#53624E;
+    --padding-side:140px;
+}
+
 body {
-    background:#E0E1DF;   
-    padding: 40px;
+    background:var(--main-bg-colour);   
+    padding: 40px var(--padding-side);
 }
 
 #main{
@@ -13,15 +20,23 @@ body {
 }
 
 .navbar{
-    padding:10px 40px;
+    padding:10px var(--padding-side);
     position: fixed;
-    background:#E0E1DF;   
+    background:var(--main-bg-colour);   
     top:0;
     left:0;
     right:0;
     z-index:100;
     display: flex;
     align-items: center;
+    opacity: 1;
+    transition: opacity 1s linear, top 1s linear;
+}
+
+
+.navbar.scroll{
+    opacity: 0;
+    top: -100%;
 }
 
 .tree{
@@ -36,11 +51,14 @@ body {
     text-align: center;
     border-bottom:1px solid #53624E;
     margin-bottom: 40px;
+    color:#53624E;
 
 }
 
 .heading div{
     border-top:1px solid #53624E;
+    padding: 20px;
+    font-size: 7vw;
 }
 
 .heading div span{
@@ -59,7 +77,7 @@ img.logo{
 
 .reserve_button{
     text-transform: uppercase;
-    color: #E0E1DF;
+    color: var(--main-bg-colour);
     background: #53624E;
     padding:10;
     display:inline-block;
@@ -80,17 +98,45 @@ img.logo{
     position: relative;
 }
 .calendar{
-    display: none;
+    opacity: 0;
     width: 200%;
     background: red;
     position: absolute;
     height: 100px;
     bottom: -100px;
+    width: 200%;
     left:0;
     right:0;
     z-index:1;
+    transition: opacity 0.5s linear;
 }
+
+
+.calendar.active{
+    opacity: 1;
+    
+}
+
 
 img{
     width:100%
+}
+
+
+@media (max-width: 860px) and (orientation: portrait) {
+
+    :root {
+        --padding-side: 40px;
+    };
+
+    .tree{
+        visibility: hidden;
+    }
+
+    .reservations{
+        display: none;
+    }
+
+
+
 }
