--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,8 +36,8 @@ h3 {
 
 .navbar {
     display: grid;
-    grid-template-columns: 1fr 2fr 3fr repeat(2, 0);
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(10, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     border: 1px solid #CFD2CC;
@@ -50,7 +50,7 @@ h3 {
 
 
 .filler { 
-    grid-area: 1 / 2 / 3 / 3; 
+    grid-area: 1 / 2 / 3 / 4; 
     list-style: none;
 }
 
@@ -102,7 +102,7 @@ h3 {
 
 
 .navlist { 
-        grid-area: 1 / 3 / 3 / 4;
+        grid-area: 1 / 4 / 3 / 7;
     
 }
 
