--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,15 +37,17 @@ h3 {
 .navbar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-    grid-template-columns: auto 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 12% 28% auto;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     border: 1px solid #CFD2CC;
+    padding-bottom: 500px;
 }
     
 .logo { 
     grid-area: 1 / 1 / 3 / 2;
+    border: 1px solid #CFD2CC;
 
 }
 
@@ -53,6 +55,12 @@ h3 {
 .filler { 
     grid-area: 1 / 2 / 3 / 5; 
     list-style: none;
+    padding-top: 2%;
+    padding-left: 5%;
+    font-size:large;
+    letter-spacing: 0.1em;
+    border: 1px solid #CFD2CC;
+
     
 }
 
@@ -109,11 +117,15 @@ h3 {
 }
 
 .img logo {
-    width: 200%;
+    background-size: cover;
+    height: 0;
+    padding: 0; /* reset */
+    padding-bottom: 92%;
+
 }
 
 .navlist ul{
-    font-size: 100%;
+    font-size: auto;
     font-weight: inherit;
     font-family: inherit;
     font-style: inherit;
@@ -126,11 +138,10 @@ h3 {
     
 .navlist ul li{
     display: grid;
-    grid-template-columns: 80px 200px auto 40px;
-    padding:30px;
     border: 1px solid #CFD2CC;
     padding: 20px;
-    text-align: center;
+    text-align: left;
+    position: relative;
 }
 
 
