--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,7 +169,7 @@ img{
     width:100%
 }
 
-.Teas {
+.teas {
     padding: 40px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -179,19 +179,19 @@ img{
     margin: 0%;
 }
     
-.Teac1 { 
+.teac1 { 
     grid-area: 1 / 1 / 2 / 2;
  }
-.Teac2 { 
+.teac2 { 
     grid-area: 1 / 2 / 2 / 3;
  }
-.Teac3 { 
+.teac3 { 
     grid-area: 1 / 3 / 2 / 4; 
 }
-.Teac4 { 
+.teac4 { 
     grid-area: 1 / 4 / 2 / 5;
  }
-.Teac5 { 
+.teac5 { 
     grid-area: 1 / 5 / 2 / 6;
  }
 
@@ -286,21 +286,33 @@ img{
     font-weight: inherit;
     font-family: inherit;
     font-style: inherit;
-    padding-top: 50px;
+    background: linear-gradient(to right, #f5f5f1 50%, #f9f9f7 50% );
+    
+    margin: 20px;
+    padding-left: 0%;
 }
     
 .info1 { 
     grid-area: 1 / 1 / 3 / 4; 
     text-align: left;
-    padding-top: 50px;
     background-color: #53624E;
+    background: #f5f5f1;
+    padding-top: 5%;
+    padding-left: 20%;
+    margin-top: 10%;
+
 
 
 }
 
 .info2 {
      grid-area: 1 / 4 / 2 / 7; 
-     background-color: #F9F9F7;
+     background: #fafaf8;
+     padding-top: 5%;
+     padding-left: 20%;
+     margin-top: 10%;
+     
+     
 
 }
 
@@ -310,7 +322,7 @@ img{
 
 
 @media (max-width: 860px) and (orientation: portrait) {
-    .Teac2{
+    .teac2{
         visibility: hidden;
     }
 
