--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,8 @@ h3 {
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     padding-bottom: 500px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
     
 .logo { 
@@ -112,6 +114,7 @@ h3 {
 
 .navlist { 
         grid-area: 1 / 5 / 3 / 8;
+        
     
 }
 
@@ -177,6 +180,10 @@ img{
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     margin: 0%;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-left: auto;
+    margin-right: auto;
 }
     
 .teac1 { 
@@ -203,10 +210,7 @@ img{
     font-style: inherit;
 }
 
-.Teaimg-with-text img {
-    display: block;
-    margin: 0 auto;
-}
+
 
 .three {
     padding: 20px;
@@ -219,6 +223,10 @@ img{
     grid-row-gap: 0px;
     grid-area: auto;
     position: relative;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-left: auto;
+    margin-right: auto;
 
     
     }
@@ -280,16 +288,14 @@ img{
 .info {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     font-weight: inherit;
     font-family: inherit;
     font-style: inherit;
     background: linear-gradient(to right, #f5f5f1 50%, #f9f9f7 50% );
-    
-    margin: 20px;
-    padding-left: 0%;
+
 }
     
 .info1 { 
@@ -312,11 +318,45 @@ img{
      padding-left: 20%;
      margin-top: 10%;
      
-     
-
 }
 
+.footer {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25fr;
+    grid-template-rows: 33% 33% 33%;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    justify-items: stretch;
+    align-items: start;
+    margin-top: 100px;
+ }
 
+ .footer ul{
+     list-style: none;
+ }
+
+.footerhead{
+    border-bottom: 0.5px solid black;
+    padding-bottom: 40px;
+    border-collapse: collapse;
+    vertical-align: text-top;
+    border
+}
+
+.footer1{
+    grid-area: 1 / 1 / 3 / 2;
+}
+
+.footer2{
+    grid-area: 1 / 2 / 3 / 3;
+}
+
+.footer3{
+    grid-area: 1 / 3 / 3 / 4;
+}
+.footer4{
+    grid-area: 1 / 4 / 3 / 5;
+}
 
 
 
