--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,10 @@
 body {
     background:#FFFFFF;  
     padding: 40px;
-    
+    font-family: Gt Pressura Mono, Roboto Mono, monospace;
+    font-size: 16px;
+    line-height: 24px;
+    overflow-x: hidden;
 }
 h1 {
     font-weight: bold;
@@ -36,34 +39,37 @@ h3 {
 
 .navbar {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: 12% 28% auto;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    padding-bottom: 500px;
-    padding-left: 40px;
-    padding-right: 40px;
-}
+    width: 75%;
+    align-items: center;
+    justify-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #CFD2CC;
+
+
+    }
     
 .logo { 
     grid-area: 1 / 1 / 3 / 2;
-    border: 1px solid #CFD2CC;
+    height: auto;
+    max-height: 60px;
+    display: flex;
 
 }
 
 
 .filler { 
-    grid-area: 1 / 2 / 3 / 5; 
-    list-style: none;
-    padding-top: 2%;
-    padding-left: 5%;
-    font-size:large;
-    letter-spacing: 0.1em;
-    border: 1px solid #CFD2CC;
-
+    grid-area: 1 / 2 / 3 / 4;
+    display: flex;
+    width: 100%;
+    overflow: hidden;
     
 }
+
+
+
 
 .sale{
     background: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/swatch-hero_2400x.jpg?v=1558564563&auto=format&q=50&) center center/cover no-repeat padding-box;
@@ -110,42 +116,62 @@ h3 {
     color: #373F3D;
 }
 
-
-
-.navlist { 
-        grid-area: 1 / 5 / 3 / 8;
-        
-    
-}
-
-.img logo {
-    background-size: cover;
-    height: 0;
-    padding: 0; /* reset */
-    padding-bottom: 92%;
-
-}
-
-.navlist ul{
-    font-size: auto;
-    font-weight: inherit;
-    font-family: inherit;
-    font-style: inherit;
+.sixfont {
+    font-size: larger;
+    font-weight: bold;
     text-transform: uppercase;
-    vertical-align: baseline;
-    list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
- }
-    
-.navlist ul li{
-    display: grid;
-    border: 1px solid #CFD2CC;
-    padding: 20px;
     text-align: left;
-    position: relative;
+    border: 1px solid #CFD2CC;
+    border-width: 100%;
 }
 
+.teasnav {
+    grid-area: 1 / 4 / 2 / 5;
+   display: flex;
+
+
+}
+
+.brewwaresnav {
+    grid-area: 1 / 5 / 2 / 6;
+    display: flex;
+
+
+
+
+}
+
+.cart {
+    grid-area: 1 / 6 / 2 / 7; 
+    display: flex;
+
+
+
+
+}
+
+.merch {
+    grid-area: 2 / 4 / 3 / 5;
+    display: flex;
+
+
+
+}
+
+.aboutus {
+    grid-area: 2 / 5 / 3 / 6;
+    display: flex;
+
+
+
+}
+
+.wholesalenav {
+    grid-area: 2 / 6 / 3 / 7;
+    display: flex;
+
+
+}
 
 
 
@@ -163,9 +189,7 @@ h3 {
 }
 
 
-img.logo{
-    height:100px;
-} 
+
 
 
 img{
