--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,9 +26,19 @@ h3 {
     font-weight: bold;
 }
 
+h4 {
+    font-size: 12px;
+    font-family: Display,Garamond,serif;
+    font-weight: bold;
+}
+
+
+
+
 :root{
     --main: red;
 }
+
 
 
 
@@ -47,7 +57,7 @@ h3 {
     margin-left: auto;
     margin-right: auto;
     border: 1px solid #CFD2CC;
-    
+    margin-bottom: 500px;
 
     }
     
@@ -56,7 +66,7 @@ h3 {
     height: auto;
     max-height: 60px;
     display: flex;
-
+    
 }
 
 
@@ -363,43 +373,100 @@ img{
      
 }
 
-.footer {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25fr;
-    grid-template-rows: 33% 33% 33%;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    justify-items: stretch;
-    align-items: start;
-    margin-top: 100px;
- }
-
- .footer ul{
+ .foothead ul{
      list-style: none;
  }
 
-.footerhead{
-    border-bottom: 0.5px solid black;
-    padding-bottom: 40px;
-    border-collapse: collapse;
-    vertical-align: text-top;
-
+ .foothead {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    border-bottom:1px solid #CFD2CC; 
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    margin-top: 100px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-.footer1{
+    
+.fh1 { 
     grid-area: 1 / 1 / 3 / 2;
+    display: flex; 
+    margin-bottom: 15px;
+
 }
 
-.footer2{
+
+.fh2 { 
     grid-area: 1 / 2 / 3 / 3;
+    display: flex;
+    margin-bottom: 15px;
+
 }
 
-.footer3{
-    grid-area: 1 / 3 / 3 / 4;
+
+.fh3 { 
+    grid-area: 1 / 3 / 3 / 4; 
+    display: flex;
+    margin-bottom: 15px;
+
 }
-.footer4{
-    grid-area: 1 / 4 / 3 / 5;
+
+
+.fh4 { 
+    grid-area: 1 / 4 / 3 / 5; 
+    display: flex;
+    margin-bottom: 15px;
+
 }
+
+.footbod {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    margin-top: 15px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+    
+.fb1 { 
+    grid-area: 1 / 1 / 5 / 2;
+    display: flex; 
+}
+
+
+.fb2 { 
+    grid-area: 1 / 2 / 5 / 3;
+    display: flex; 
+}
+
+
+.fb3 { 
+    grid-area: 1 / 3 / 5 / 4; 
+    display: flex;
+}
+
+
+.fb4 { 
+    grid-area: 1 / 4 / 5 / 5; 
+    display: flex;
+}
+
+.footbod ul{
+    list-style: none;
+}
+.footbod h4:hover {
+    text-decoration: underline;
+}
+
 
 
 .warespage{
@@ -435,11 +502,8 @@ img{
         display: none;
     }
 
-    .navbar.merch.sixfont{
-        visibility: hidden;
-    }
-
-    .navbar.teasnav.sixfont{
+ 
+    .filler{
         visibility: hidden;
     }
     
