--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -296,6 +296,7 @@ img{
 .centered2 {
     position: relative;
     text-align: center;
+    margin-top: 15px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
