--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,6 @@ h5 {
     justify-items: center;
     margin-left: auto;
     margin-right: auto;
-    border: 1px solid #CFD2CC;
 
     margin-bottom: 1000px;
     }
@@ -69,12 +68,17 @@ h5 {
     
     
 .logo { 
-    grid-area: 1 / 1 / 3 / 2;
-    height: auto;
-    max-height: 60px;
-    display: flex;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    align-items: center;
     
 }
+
+
+
+
 
 
 .filler { 
@@ -95,16 +99,40 @@ h5 {
     list-style: none;
     display: flex;
     justify-content: center;
-
 }
+
+.filler li{
+    opacity: .3;
+    transition: opacity 1s ease;
+    
+}
+.filler li:hover{
+    opacity: 1;
+}
+
+.hov:hover{
+    text-decoration: underline;
+}
+
+
+
+
 
 .border {
     border:1px solid #CFD2CC ;
     width: 100%;
     height: 100%;
+    padding-left: 5%;
+    padding-top: 5%;
 
 }
 
+.logoborder{
+    border:1px solid #CFD2CC ;
+    width: 100%;
+    height: 100%;
+    grid-area: 1 / 1 / 3 / 2;
+}
 
 .overflow {
     overflow: hidden;
@@ -167,9 +195,10 @@ h5 {
     font-size: larger;
     font-weight: bold;
     text-transform: uppercase;
-    text-align: left;
-    
+    text-align: left;  
 }
+
+
 
 .teasnav {
     grid-area: 1 / 4 / 2 / 5;
@@ -186,25 +215,17 @@ h5 {
     grid-area: 1 / 5 / 2 / 6;
     display: flex;
     
-
-
-
 }
 
 .cart {
     grid-area: 1 / 6 / 2 / 7; 
     display: flex;
 
-
-
-
 }
 
 .merch {
     grid-area: 2 / 4 / 3 / 5;
     display: flex;
-
-
 
 }
 
@@ -302,6 +323,7 @@ img{
 
 .centeredmain {
     position: relative;
+    font-family: Louize Display,Garamond,serif;
     text-align: center;
     top: 45%;
     left: 50%;
