--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 body {
     background:#FFFFFF;  
     padding: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: GT-Pressura, Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
     line-height: 24px;
     overflow-x: hidden;
@@ -136,8 +136,8 @@ h5 {
 
 #scroll-image{
     height: 100vh;
-    position: absolute;
-    top: 0%;
+    position: relative;
+
 }
 
 
@@ -145,13 +145,11 @@ h5 {
     position: absolute;
     background-size: cover;
     background-position: 50%;
-    top: 100;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: -100;
-    opacity: 0;
-
+    opacity: 1;
 
 }
 
