--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,19 +14,15 @@ body {
     color: #53624E;
 }
 h1 {
-    font-size: 80px;
-   
+    font-size: 80px;  
 }
 
 h3 {
-    font-size: 15px;
- 
-
+    font-size: 15px; 
 }
 
 h4 {
     font-size: 12px;
-
 
 }
 
@@ -60,24 +56,25 @@ h5 {
     justify-items: center;
     margin-left: auto;
     margin-right: auto;
+    font-weight: bold;
     }
 
 
     
-    
+/* For the logo in the Navbar*/
 .logo { 
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    align-items: center;   
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    
 }
 
 
 
 
 
-
+/* Used in the navbar for the list and hiding overflow for when changing the size of the navbar to hide the excess full stops */
 .filler { 
     grid-area: 1 / 2 / 3 / 4;
     display: flex;
@@ -88,8 +85,7 @@ h5 {
     padding-right: 1em;
 }
 
-
-
+/* gives structure to the list in the filler class */
 .flex1 {
     list-style: none;
     display: flex;
@@ -97,23 +93,24 @@ h5 {
 }
 
 .filler li{
-    opacity: .3;
-    transition: opacity 1s ease;
-    
+    opacity: .4;
+    transition: opacity .5s ease;   
 }
 .filler li:hover{
     opacity: 1;
 }
 
+/* The Hover used throughout the page at various times to give an underlined text */
 .hov:hover{
     text-decoration: underline;
 }
 
+/* */
 .bordermain {
     border:1px solid #CFD2CC ;
 }
 
-
+/* Used throughout the navbar */
 .border {
     border:1px solid #CFD2CC ;
     width: 100%;
@@ -130,21 +127,20 @@ h5 {
     grid-area: 1 / 1 / 3 / 2;
 }
 
+/* Used in the filler class to give the illusion of incrementing full stops when changing the size of the page */
 .overflow {
     overflow: hidden;
     width: 100%;
 }
-
+/* Background images in the homepage */
 #scroll-image{
     height: 100vh;
     position: relative;
-
 }
 
-
+/* used for the background images on the homepage */
 .test{
     position: absolute;
-    display: block;
     background-size: cover;
     background-position: 50%;
     top: 0;
@@ -173,15 +169,13 @@ h5 {
     margin-bottom: 90px;
 }
 .mb2{
-    margin-bottom: 40px;
-    
+    margin-bottom: 40px;   
 }
 
 .testmain h2{
     border: #CFD2CC;
     text-transform: uppercase;
     font-size: large;
-    
 }
 
 
@@ -190,13 +184,14 @@ h5 {
 }
 
 .steep{
-    background-image: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/white_gywan_2400x.jpg?v=1551770466&auto=format&q=50&) /*center center/cover no-repeat padding-box*/;
+    background-image: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/white_gywan_2400x.jpg?v=1551770466&auto=format&q=50&);
 }
 
 .sale{
-    background-image: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/swatch-hero_2400x.jpg?v=1558564563&auto=format&q=50&) /*center center/cover no-repeat padding-box*/;
+    background-image: url(https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/swatch-hero_2400x.jpg?v=1558564563&auto=format&q=50&);
 }
 
+/* */
 .centeredhead {
     position: relative;
     text-align: center;
