Fix(variables): add variables for colors on site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,11 +19,11 @@
                         <p>Sale</p>
                     </li>
                     <li class= "flex1">
-                        <p class = "overflow">II.............................................................................</p>
+                        <p class = "overflow">II.............................................................................g</p>
                         <p>Wholesale</p>
                     </li>
                     <li class = "flex1">
-                        <p class = "overflow">III................................................................................................</p>
+                        <p class = "overflow">III................................................................................................m</p>
                         <p>Steep</p>
                     </li>
                     </ul>
@@ -54,7 +54,7 @@
                 <h1 class = "testmain  mb2"> Wholesale Program</h1>
                 <h2 class = "testmain hov"> Learn More</h2>
             </div>
-            <div class = "test steep mb2">
+            <div class = "test steep">
                 <h1 class = "testmain  mb2"> Bring Swallowtail Home</h1>
                 <h2 class = "testmain hov"> Shop Now</h2>
             </div>
