--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,12 +11,11 @@ body {
     font-size: 16px;
     line-height: 24px;
     overflow-x: hidden;
-    color: #53624E;
+    color: var(--maindark);
 }
 h1 {
     font-size: 80px;  
 }
-
 h3 {
     font-size: 15px; 
 }
@@ -35,7 +34,8 @@ h5 {
 
 
 :root{
-    --main: red;
+    --maindark: #53624E;
+    --mainlight: #CFD2CC;
 }
 
 
@@ -80,7 +80,7 @@ h5 {
     display: flex;
     width: 100%;
     overflow: hidden;
-    border: 1px solid #CFD2CC;
+    border: 1px solid var(--mainlight);
     padding-left: 1em;
     padding-right: 1em;
 }
@@ -107,12 +107,12 @@ h5 {
 
 /* */
 .bordermain {
-    border:1px solid #CFD2CC ;
+    border:1px solid var(--mainlight);
 }
 
 /* Used throughout the navbar */
 .border {
-    border:1px solid #CFD2CC ;
+    border:1px solid var(--mainlight) ;
     width: 100%;
     height: 100%;
     padding-left: 5%;
@@ -121,7 +121,7 @@ h5 {
 }
 
 .logoborder{
-    border:1px solid #CFD2CC ;
+    border:1px solid var(--mainlight) ;
     width: 100%;
     height: 100%;
     grid-area: 1 / 1 / 3 / 2;
@@ -173,10 +173,11 @@ h5 {
 }
 
 .testmain h2{
-    border: #CFD2CC;
+    border: var(--mainlight);
     text-transform: uppercase;
     font-size: large;
 }
+
 
 
 .wholesale{
@@ -198,7 +199,7 @@ h5 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #373F3D;
+    color: var(--maindark);
 }
 
 .sixfont {
@@ -327,7 +328,7 @@ img{
 }
 
 .centeredmain h2{
-    border: #CFD2CC;
+    border: var(--mainlight);
     text-transform: uppercase;
     font-size: large;
 }
@@ -441,7 +442,7 @@ img{
 .buttonbot {
     width: 100%;
     text-align: center;
-    border: 2px solid #CFD2CC;
+    border: 2px solid var(--mainlight);
     height: 45px;   
     padding: 9px 20px 7px; 
 }
@@ -460,7 +461,7 @@ img{
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    border-bottom:1px solid #CFD2CC; 
+    border-bottom:1px solid var(--mainlight); 
     grid-column-gap: 20px;
     grid-row-gap: 20px;
     margin-top: 100px;
@@ -473,7 +474,6 @@ img{
     grid-area: 1 / 1 / 3 / 2;
     display: flex; 
     margin-bottom: 15px;
-
 }
 
 
