Fix(Code Elegance): Further fixing the code efficency

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,24 +130,24 @@
 </div>
 <!-- The Footer along the bottom  -->
     <div class = "foothead">
-        <div class = "fh1"> 
+        <div class = "margin"> 
             <ul>
                 <li><h3>SHOP</h3></li>
                 <li><h3>TERMS OF SERVICE</h3></li>
             </ul>
         </div>     
-        <div class = "fh1">
+        <div class = "margin">
             <ul>
                 <li><h3>COMPANY</h3></li>
                 <li><h3>REFUND POLICY</h3></li>
             </ul>
         </div>
-        <div class = "fh1">
+        <div class = "margin">
             <ul>
                 <li><h3>ACCOUNT</h3></li>
             </ul>
         </div>
-        <div class = "fh1">
+        <div class = "margin">
             <ul>
                 <li><h3>LEGAL</h3></li>
             </ul>  
@@ -155,7 +155,7 @@
     </div>
     
     <div class = "footbod">
-        <div class = "fb1">
+        <div>
             <ul>
                 <li><h4>ALL</h4></li>
                 <li><h4>Teas</h4></li>
@@ -163,7 +163,7 @@
                 <li><h4>Brew Wares</h4></li>
             </ul>
         </div>
-        <div class = "fb2">
+        <div>
             <ul>
                 <li><h4>Wholesale</h4></li>
                 <li><h4>About Us</h4></li>
@@ -171,13 +171,13 @@
                 <li><h4>FAQs</h4></li>
             </ul>
         </div>
-        <div class = "fb3">
+        <div>
             <ul>
                 <li><h4>My Orders</h4></li>
                 <li><h4>Sign Up</h4></li>
             </ul>
         </div>
-        <div class = "fb4">
+        <div>
             <ul>
                 <li><h4>Terms & Conditions</h4></li>
                 <li><h4>Privacy Policy</h4></li>
