Fix(NodeRoutes): fixed node routes to be in correct place

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,14 @@
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css" />
+    <!-- The Padlock icon used in the Navbar -->
+    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/> 
 
+    <title>Swallowtail Tea</title>
+    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>            
 <body>
-
-    
     <!-- The Background images and Navbar in the following Div -->
         <div id="scroll-image">
             <div class ="navbar">
@@ -66,7 +73,7 @@
 
     <!-- The 5 teas displayed in 5 columns in one row -->
     <div class="teas">
-        <!-- 
+         
             <div>
               
                     <img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/black_ad4be5cb-6a95-484a-bb94-2239b1a929ec_400x400_crop_center.png?v=1526857313&auto=format&q=50&" /> 
@@ -92,7 +99,7 @@
 
             <div> <img src = "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/blend_400x400_crop_center.png?v=1526857239&auto=format&q=50&"/>
                 <p class = "tealign hov">Blends</p>
-            </div> -->
+            </div>
 
     </div>
     <!-- The three columns with the background images fetched from an api -->
