--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -532,10 +532,13 @@ img{
     justify-content:center;
  }
 
+ .tealight image:hover { 
+    text-decoration: underline;
+ }
+
  .product_title{
     font: size 16px;
     font-weight: bold;
-    text-decoration:underline;
     font-family: inherit;
     padding-top: 15px;
   }
