Add(Heroku): Add Heroku on Package

--- a/views/wares.ejs
+++ b/views/wares.ejs
@@ -6,7 +6,7 @@
     <!-- The Padlock icon used in the Navbar -->
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/> 
 
-    <title>Swallowtail Tea</title>
+    <title>Wares-Swallowtail Tea</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>    
     <body>
 </head>
