--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -614,6 +614,7 @@ img{
         left: 0;
         right: 0;
         top: 0;
+        margin-top: -75px;
 
     }
     .reservations{
@@ -631,6 +632,21 @@ img{
    
     .heading div{
         font-size: 8vw;
+    }
+
+    .three{
+        display: block;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 100vw); 
+    }
+    .three1{
+        padding-bottom: 100%;
+    }
+    .three2{
+        padding-bottom: 100%;
+    }
+    .three3{
+        padding-bottom: 100%;
     }
 
     .teas{
