--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -327,11 +327,11 @@ img{
 }
 
 .centeredmain h1{
-    font-size: 50;
+    font-size: 30px;
     margin-bottom: 35px;
 }
 
-.centeredmain h2{
+.centeredmain h3{
     border: var(--mainlight);
     text-transform: uppercase;
     font-size: large;
@@ -432,6 +432,10 @@ img{
     padding-left: 20px;
     margin-left: -40px;
     margin-right: -40px;
+    visibility: hidden;
+}
+.info{
+    visibility: visible;
 }
 
 .margin {
@@ -523,19 +527,18 @@ img{
 
 .buttonproducts {
 	box-shadow:inset 0px 1px 0px 0px #f5f5f1;
-	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-	background-color:#f5f5f1;
+	background:tan;
 	border-radius:1px;
-	border:2px solid #dcdcdc;
+	border:2px solid var(--mainlight);;
 	display:inline-block;
 	cursor:pointer;
 	color:#666666;
-	font-family:Verdana;
+	font-family:inherit;
 	font-size:16px;
 	font-weight:bold;
 	padding:13px 13px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #f5f5f1;;
+	/* text-shadow:0px 1px 0px #f5f5f1; */
 }
 .buttonproducts:hover {
 	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
@@ -637,7 +640,7 @@ img{
     .three{
         display: block;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 100vw); 
+        grid-template-rows: repeat(3, 70vw); 
     }
     .three1{
         padding-bottom: 100%;
@@ -657,6 +660,14 @@ img{
         padding-right: 12px;
         margin-left: -12px;
         margin-right: -12px;
+    }
+
+    .infopx{
+        visibility: visible;
+    }
+
+    .info{
+        visibility: hidden;
     }
 
 }
