--- a/views/index.ejs
+++ b/views/index.ejs
@@ -152,6 +152,13 @@
 
     
 <!-- The info div which has two halves displaying the information on the website -->
+<div class = "infopx">
+    <p class = "margin";">Sign up and get 10% off your first purchase.</p>   
+    <p class = "email""> Your email address . . . </p>
+    <p class = "buttonbot upperclass hov">Join</p>
+</div> 
+
+
 <div class="info">
     <div class = "info1">
         <p style="font-weight: bold;">Swallowtail Tea</p>
