--- a/views/wares.ejs
+++ b/views/wares.ejs
@@ -56,10 +56,17 @@
         <div class ="wholesalenav sixfont margin"> Wholesale</div>
     </div>
 </div>
+
+
      <div id = "warespage">
 
     </div>
-
+    <div class = "infopx">
+        <p class = "margin";">Sign up and get 10% off your first purchase.</p>   
+        <p class = "email""> Your email address . . . </p>
+        <p class = "buttonbot upperclass hov">Join</p>
+    </div> 
+    
     
     <div class="info">
         <div class = "info1">
